--- a/_toc.yml
+++ b/_toc.yml
@@ -1,7 +1,7 @@
 format: jb-book
 root: index
 chapters:
-  - file: lecture_16_example
+  - file: lecture_16_example.ipynb
   - file: Project_1
-  
+
   
