--- a/_toc.yml
+++ b/_toc.yml
@@ -1,5 +1,10 @@
 format: jb-book
 root: index
-chapters:
-  - file: lecture_16_example
-  - file: Project_1
+parts:
+  - caption: Lectures
+    chapters:
+      - file: lecture_16_example
+  - caption: Projects
+    chapters:
+      - file: Project_1
+
